--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -70,6 +70,7 @@
 
            {% block footer %}
                {% block copyright %}
+               <div class="exit">
                <div class="row">
                    <p class="col-sm-4">&copy; 2022 github.com/torsik</p>
                     <ul class="col-sm-8">
@@ -78,6 +79,7 @@
                          <li class="col-sm-1"><img src="https://content.codecademy.com/projects/make-a-website/lesson-4/instagram.svg"></li>
                          <li class="col-sm-1"><img src="https://content.codecademy.com/projects/make-a-website/lesson-4/medium.svg"></li>
                     </ul>
+               </div>
                </div>
                {% endblock %}
            {% endblock %}
