--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -7,6 +7,10 @@ html, body {
     max-width: 10800px;
 }
 
+.selector-for-some-widget {
+    box-sizing: content-box;
+}
+
 .sidebar-nav {
     margin-top: 20px;
     padding: 0;
