--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,11 @@
 
 {% block content %}
 <h1>Main page</h1>
-    <p>Welcome to <em>World of books!</em> Created using Django</p>
+    <p>Welcome to <em>World of books!</em> Created using Django .It's the 1st test project.</p>
 
 <h2> Dymanic content</h2>
 
-    <p>World od bks DB contains:</p>
+    <p>World of books DB contains:</p>
     <ul>
         <li><strong>Number of books: </strong>{{ num_books }}</li>
         <li><strong>Number of authors: </strong>{{ num_authors }}</li>
