--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -19,7 +19,28 @@ table {
 
 #authors tr:hover {background-color: coral;}
 
+#books_list {
+    font-family: Calibri, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
 
+#books_list td, th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#books_list tr:nth-child(even){background-color: #f2f2f2;}
+
+#books_list tr:hover {background-color: #ddd}
+
+#books_list th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #FFA500;
+    color: white;
+}
 .sidebar-nav {
     margin-top: 20px;
     padding: 0;
