--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>Main page</h1>
-    <p>Welcome to <em>World of books!</em> Created using Django .It's the 1st test project.</p>
+    <p>Welcome to <em>World of books!</em> Created using Django framework. It's the 1st test project. Possibly it will be extended with other features</p>
 
 <h2> Dymanic content</h2>
 
