--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -41,10 +41,28 @@ table {
     background-color: #FFA500;
     color: white;
 }
+
 .sidebar-nav {
     margin-top: 20px;
     padding: 0;
     list-style: none;
+}
+.sidebar-nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: whitesmoke;
+}
+.sidebar-nav li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+.sidebar-nav li a:hover {
+    background-color: #FFA500;
+    color: white;
 }
 
 h1 {
@@ -68,7 +86,8 @@ h1 {
     background-color: orange;
     color: white;
     text-align: center;
-    padding-bottom: 2px;
+    padding-bottom: 1px;
+    height: 60px;
 }
 
 .exit ul {
@@ -76,9 +95,9 @@ h1 {
 }
 
 .exit li img {
-    width: 380px;
+    width: 340px;
     height: 30px;
     list-style: none;
-    padding: 6px;
+    padding: 5px;
     position: absolute;
 }
