--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -71,14 +71,7 @@
                {% block copyright %}
                <div class="exit">
                <div class="row">
-                   <p class="col-sm-4">&copy; 2022 github.com/torsik</p>
-                   <br>
-                    <ul class="col-sm-8">
-                         <li class="col-sm-1"><img src="https://content.codecademy.com/projects/make-a-website/lesson-4/twitter.svg"></li>
-                         <li class="col-sm-1"><img src="https://content.codecademy.com/projects/make-a-website/lesson-4/facebook.svg"></li>
-                         <li class="col-sm-1"><img src="https://content.codecademy.com/projects/make-a-website/lesson-4/instagram.svg"></li>
-                         <li class="col-sm-1"><img src="https://content.codecademy.com/projects/make-a-website/lesson-4/medium.svg"></li>
-                    </ul>
+                   <p>&copy; 2022 github.com/torsik</p>
                </div>
                </div>
                {% endblock %}
